WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267635
CrashOnOverflow::crash() in WebKit::RemoteLayerBackingStore::supportsPartialRepaint() const + 0 (RemoteLayerBackingStore.mm:303)
https://bugs.webkit.org/show_bug.cgi?id=267635
Summary
CrashOnOverflow::crash() in WebKit::RemoteLayerBackingStore::supportsPartialR...
Erica Li
Reported
2024-01-17 05:46:03 PST
rdar://120842299
Attachments
Add attachment
proposed patch, testcase, etc.
Erica Li
Comment 1
2024-01-17 05:50:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22863
EWS
Comment 2
2024-01-18 03:53:05 PST
Committed
273174@main
(bb80551dbd88): <
https://commits.webkit.org/273174@main
> Reviewed commits have been landed. Closing PR #22863 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug